feat(know): multimodal knowledge
