# docs/openapi/swagger.json
@@ -2222,7 +2222,7 @@
                     "type": "string"
                 },
                 "docAnalyzer": {
-                    "description": "文档解析类型 text / ocr  / model / asr / multimodalModel",
+                    "description": "文档解析类型 text / ocr  / model / asr / multimodal",
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -2289,7 +2289,7 @@
                     "type": "string"
                 },
                 "docAnalyzer": {
-                    "description": "文档解析类型 text / ocr  / model / asr / multimodalModel",
+                    "description": "文档解析类型 text / ocr  / model / asr / multimodal",
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -2354,15 +2354,15 @@
                     "type": "string"
                 },
                 "docSize": {
-                    "description": "文档类型",
+                    "description": "文档大小（可选）",
                     "type": "integer"
                 },
                 "docType": {
-                    "description": "文档类型",
+                    "description": "文档后缀",
                     "type": "string"
                 },
                 "docUrl": {
-                    "description": "文档url",
+                    "description": "文档url（可选）",
                     "type": "string"
                 }
             }
@@ -2540,10 +2540,16 @@
         "request.KnowledgeHitReq": {
             "type": "object",
             "required": [
-                "knowledgeMatchParams",
-                "question"
+                "knowledgeMatchParams"
             ],
             "properties": {
+                "docInfoList": {
+                    "description": "上传文档列表",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.DocInfo"
+                    }
+                },
                 "knowledgeList": {
                     "type": "array",
                     "items": {
@@ -2869,6 +2875,15 @@
                 },
                 "knowledgeName": {
                     "type": "string"
+                },
+                "rerankInfo": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.RerankInfo"
+                    }
+                },
+                "score": {
+                    "type": "number"
                 },
                 "snippet": {
                     "type": "string"
@@ -3766,6 +3781,20 @@
                 },
                 "updated_at": {
                     "type": "integer"
+                }
+            }
+        },
+        "response.RerankInfo": {
+            "type": "object",
+            "properties": {
+                "fileUrl": {
+                    "type": "string"
+                },
+                "score": {
+                    "type": "number"
+                },
+                "type": {
+                    "type": "string"
                 }
             }
         },
